name:                ryokou
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dmarin/ryokou#readme
license:             MIT
license-file:        LICENSE
author:              Didier Marin
maintainer:          mail@didiermarin.com
copyright:           2019 Didier Marin
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable scrap_places
  hs-source-dirs:      src
  main-is:             ScrapPlaces.hs
  default-language:    Haskell2010
  other-modules:       Place
  build-depends:       base >= 4.7 && < 5,
                       scalpel -any,
                       regex-tdfa -any,
                       aeson -any,
                       bytestring -any

executable export_kml
  hs-source-dirs:      src
  main-is:             ExportKML.hs
  default-language:    Haskell2010
  other-modules:       Place
  build-depends:       base >= 4.7 && < 5,
                       aeson -any,
                       bytestring -any,
                       utf8-string -any,
                       either -any,
                       xml-conduit -any,
                       xml-hamlet -any,
                       containers -any,
                       text -any
